# vlm-eval-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
configs/: toy_qa_echo.yml
scripts/: generate_architecture_diagram.py  run_toy_qa.py
tests/: test_cli.py  test_toy_qa.py
vlm_eval_harness/: __init__.py  cli.py  config.py  core.py
vlm_eval_harness/benchmarks/: __init__.py  toy_qa.py
vlm_eval_harness/evaluation/: __init__.py  metrics.py
vlm_eval_harness/logging/: __init__.py  json_logger.py
vlm_eval_harness/models/: __init__.py  base.py  echo_model.py
