[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-eval-harness"
version = "0.1.0"
description = "CLI-first Python harness for evaluating vision-language models (VLMs) and multimodal LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abhijeet Gupta" }]
keywords = ["vlm", "evaluation", "benchmark", "multimodal", "llm"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vlm-eval = "vlm_eval_harness.cli:app"

[project.urls]
Homepage = "https://github.com/abhijeetgupta02/vlm-eval-harness"

[tool.setuptools.packages.find]
include = ["vlm_eval_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
